Fixing CI/CD workflows tests issues